# sui-zk-airdrop

./: Cargo.toml  Move.toml  README.md  wallets.json
sources/: bagdrop.move
src/: leanimt.circom  lib.rs  merkle.rs  poseidon.rs
tests/: bagdrop_tests.move
