[package]
name = "bagdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
ark-bn254 = "0.5.0"
ark-circom = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-ff = "0.4.1"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
fastcrypto-zkp = "0.1.3"
hex = "0.4.3"
num-bigint = "0.4.6"
rand = "0.8.5"
serde_json = "1.0.135"
sui-sdk-types = "0.0.2"
tokio = "1.43.0"
